--- a/indexl.html
+++ b/indexl.html
@@ -10,6 +10,7 @@
         <h1>Hola</h1>
         <button>+</button>
         <button>-</button>
+        <h2>Hola2</h2>
     </div>
 </body>
 </html>
